k8s-jenkins-yaml/jenkins-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: infra
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 30160
  type: NodePort
  selector:
    run: jenkins
