k8s-jenkins-yaml/jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  name: jenkins.example.com
  namespace: infra
spec:
  rules:
    - host: jenkins.example.com
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 80
            path: /
